--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
-<a href="week8.html"><b>8P</b></a><br>
+<a href="week8.html"><b>8</b></a>
+<a href="week9.html"><b>9P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -67,41 +68,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4885</font></td>
-    <td><font size=2>4050</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5460</font></td>
+    <td><font size=2>4655</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>425</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5610</font></td>
-    <td><font size=2>5030</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6150</font></td>
+    <td><font size=2>5570</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>475</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5110</font></td>
-    <td><font size=2>4575</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5330</font></td>
+    <td><font size=2>4835</font></td>
     <td><font size=2>1360</font></td>
-    <td><font size=2>340</font></td>
+    <td><font size=2>220</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4545</font></td>
-    <td><font size=2>5160</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>4975</font></td>
+    <td><font size=2>5875</font></td>
     <td><font size=2>910</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>3865</font></td>
-    <td><font size=2>5955</font></td>
+    <td><font size=2>4360</font></td>
+    <td><font size=2>6345</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
@@ -115,41 +116,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4290</font></td>
-    <td><font size=2>3670</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4680</font></td>
+    <td><font size=2>4165</font></td>
     <td><font size=2>765</font></td>
     <td><font size=2>390</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5295</font></td>
-    <td><font size=2>4895</font></td>
+    <td><font size=2>5835</font></td>
+    <td><font size=2>5435</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>465</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>5100</font></td>
-    <td><font size=2>4940</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5705</font></td>
+    <td><font size=2>5515</font></td>
     <td><font size=2>865</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4905</font></td>
-    <td><font size=2>5075</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5620</font></td>
+    <td><font size=2>5505</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>460</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>States(6)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4220</font></td>
-    <td><font size=2>4475</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4480</font></td>
+    <td><font size=2>4695</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>205</font></td>
     <td><font size=2>0</font></td>
