--- a/freeagt.html
+++ b/freeagt.html
@@ -1,63 +1,63 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 7)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 8)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 985</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 945</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 750</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jared Goff             </td><td><font size=3> 710</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 510</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Geno Smith             </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Brandon Allen          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Mike White             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Carson Wentz           </td><td><font size=3>1115</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3>1060</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 825</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jared Goff             </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 710</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 670</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 530</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Geno Smith             </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Mike White             </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Brandon Allen          </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Samaje Perine          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>JD McKissic            </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Giovani Bernard        </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Ty Johnson             </td><td><font size=3> 215</td></tr>
 <tr><td><font size=3>Ty'Son Williams        </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>Giovani Bernard        </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Travis Homer           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Boston Scott           </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Damien Williams        </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Malcolm Brown          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Phillip Lindsay        </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Jordan Howard          </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Peyton Barber          </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Ty Johnson             </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>JJ Taylor              </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>James White            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>David Johnson          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Andy Janovich          </td><td><font size=3>  55</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 510</td></tr>
 <tr><td><font size=3>Christian Kirk         </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>AJ Green               </td><td><font size=3> 450</td></tr>
 <tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Michael Pittman        </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>AJ Green               </td><td><font size=3> 425</td></tr>
+<tr><td><font size=3>Van Jefferson          </td><td><font size=3> 400</td></tr>
 <tr><td><font size=3>Marvin Jones           </td><td><font size=3> 390</td></tr>
-<tr><td><font size=3>Van Jefferson          </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 355</td></tr>
 <tr><td><font size=3>Deonte Harris          </td><td><font size=3> 345</td></tr>
 <tr><td><font size=3>KJ Osborn              </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 310</td></tr>
+<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>Freddie Swain          </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>Ced Wilson             </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>Randall Cobb           </td><td><font size=3> 305</td></tr>
 <tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Byron Pringle          </td><td><font size=3> 265</td></tr>
-<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>Kalif Raymond          </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 290</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
@@ -68,9 +68,9 @@
 <tr><td><font size=3>4)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Donald Parham          </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Maxx Williams          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Donald Parham          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Maxx Williams          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>10)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3> 130</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>12)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 125</td></tr>
@@ -81,30 +81,34 @@
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3> 660</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 585</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 525</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 500</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 485</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 690</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 560</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 560</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 515</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 515</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 455</td></tr>
 <tr><td><font size=3>Austin Seibert         </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 405</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>Rodrigo Blankenship    </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 400</td></tr>
 <tr><td><font size=3>Tristan Vizcaino       </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Matthew Wright         </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Matthew Wright         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>Brian Johnson          </td><td><font size=3> 140</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Tommy Tremble          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Pat Freiermuth         </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Chris Evans            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Pat Freiermuth         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Jermar Jefferson       </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Josh Palmer            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Brevin Jordan          </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Anthony Schwartz       </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Nico Collins           </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Nico Collins           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Jose Borregales        </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Jake Funk              </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Terrace Marshall       </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Chris Naggar           </td><td><font size=3>   0</td></tr>
