--- a/roster.html
+++ b/roster.html
@@ -129,6 +129,7 @@
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
+<tr><td>TEN</td><td>Adrian Peterson        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
@@ -136,7 +137,6 @@
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td>WAS</td><td>Curtis Samuel          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> GB</td><td>Robert Tonyan          </td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
@@ -180,6 +180,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Roger (7)</b></font></td></tr>
 <tr><td> TB</td><td>Tom Brady              </td></tr>
+<tr><td>IND</td><td>Carson Wentz           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
@@ -192,7 +193,6 @@
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
 <tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td> TB</td><td>Antonio Brown          </td></tr>
-<tr><td> KC</td><td>Josh Gordon            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
 <tr><td height=9></td><td></td></tr>
