--- a/pickups.html
+++ b/pickups.html
@@ -234,8 +234,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Carson Wentz/Josh Gordon</td>
+<td width=50>11/2</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -344,7 +344,8 @@ Team 6  - Demetric Felton/Tyrell Williams (10/19)<br>
 Team 3  - Hunter Henry/Logan Thomas (10/20)<br>
 Team 6  - Michael Pittman/Jose Borregales (10/26)<br>
 Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)<br>
-Team 8  - Greg Joseph/Miles Sanders (10/31)
+Team 8  - Greg Joseph/Miles Sanders (10/31)<br>
+Team 5  - Adrian Peterson/Robert Tonyan (11/2)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
