--- a/pickups.html
+++ b/pickups.html
@@ -345,7 +345,8 @@ Team 3  - Hunter Henry/Logan Thomas (10/20)<br>
 Team 6  - Michael Pittman/Jose Borregales (10/26)<br>
 Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)<br>
 Team 8  - Greg Joseph/Miles Sanders (10/31)<br>
-Team 5  - Adrian Peterson/Robert Tonyan (11/2)
+Team 5  - Adrian Peterson/Robert Tonyan (11/2)<br>
+Team 6  - Jordan Love/Henry Ruggs (11/3)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
