--- a/roster.html
+++ b/roster.html
@@ -153,6 +153,7 @@
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
 <tr><td>BAL</td><td>Tyler Huntley          </td></tr>
 <tr><td>CAR</td><td>Sam Darnold            </td></tr>
+<tr><td> GB</td><td>Jordan Love            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
@@ -162,7 +163,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
-<tr><td> LV</td><td>Henry Ruggs            </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
