--- a/roster.html
+++ b/roster.html
@@ -267,6 +267,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (10)</b></font></td></tr>
 <tr><td>TEN</td><td>Ryan Tannehill         </td></tr>
 <tr><td>PHI</td><td>Jalen Hurts            </td></tr>
+<tr><td> NO</td><td>Taysom Hill            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
@@ -281,7 +282,6 @@
 <tr><td> NO</td><td>Marquez Callaway       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
-<tr><td>CHI</td><td>Cole Kmet              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Ryan Succop            </td></tr>
 <tr><td height=9></td><td></td></tr>
