--- a/pickups.html
+++ b/pickups.html
@@ -363,4 +363,9 @@ Team 8 - DeVonta Smith
 Team 7 - Dawson Knox, DeVonta Smith<br>
 Team 8 - Darren Waller, Michael Carter
 </td></tr>
+<tr><td width=50>11/7</td>
+<td width=600>
+Team 6 - Jameis Winston<br>
+Team 9 - Matt Ryan
+</td></tr>
 </table>
