--- a/roster.html
+++ b/roster.html
@@ -153,13 +153,13 @@
 <tr><td>BAL</td><td>Tyler Huntley          </td></tr>
 <tr><td>CAR</td><td>Sam Darnold            </td></tr>
 <tr><td> GB</td><td>Jordan Love            </td></tr>
-<tr><td> NO</td><td>Jameis Winston         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>ATL</td><td>Mike Davis             </td></tr>
 <tr><td>LAR</td><td>Sony Michel            </td></tr>
 <tr><td>SEA</td><td>Alex Collins           </td></tr>
+<tr><td>PHI</td><td>Jordan Howard          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
@@ -278,7 +278,6 @@
 <tr><td>ARI</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
-<tr><td> NE</td><td>Jakobi Meyers          </td></tr>
 <tr><td> NO</td><td>Marquez Callaway       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
@@ -288,6 +287,7 @@
 <tr><td>CHI</td><td>Justin Fields          </td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td>CHI</td><td>Khalil Herbert         </td></tr>
+<tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 </table>
 </td>
 <td>
