--- a/pickups.html
+++ b/pickups.html
@@ -303,8 +303,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Pat Freiermuth/Jakobi Meyers</td>
+<td width=50>11/9</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -346,7 +346,8 @@ Team 6  - Michael Pittman/Jose Borregales (10/26)<br>
 Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)<br>
 Team 8  - Greg Joseph/Miles Sanders (10/31)<br>
 Team 5  - Adrian Peterson/Robert Tonyan (11/2)<br>
-Team 6  - Jordan Love/Henry Ruggs (11/3)
+Team 6  - Jordan Love/Henry Ruggs (11/3)<br>
+Team 6  - Jordan Howard/Jameis Winston (11/10)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
