--- a/pickups.html
+++ b/pickups.html
@@ -246,8 +246,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jeremy McNichols/Chase Claypool</td>
+<td width=50>11/11</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
