--- a/roster.html
+++ b/roster.html
@@ -186,8 +186,8 @@
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td>ATL</td><td>Cordarrelle Patterson  </td></tr>
 <tr><td>NYG</td><td>Devontae Booker        </td></tr>
+<tr><td>PIT</td><td>Jeremy McNichols       </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>CLE</td><td>Odell Beckham          </td></tr>
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
