--- a/pickups.html
+++ b/pickups.html
@@ -347,7 +347,8 @@ Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)<br>
 Team 8  - Greg Joseph/Miles Sanders (10/31)<br>
 Team 5  - Adrian Peterson/Robert Tonyan (11/2)<br>
 Team 6  - Jordan Love/Henry Ruggs (11/3)<br>
-Team 6  - Jordan Howard/Jameis Winston (11/10)
+Team 6  - Jordan Howard/Jameis Winston (11/10)<br>
+Team 6  - D'Onta Foreman/Michael Thomas (11/11)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
