--- a/roster.html
+++ b/roster.html
@@ -160,9 +160,9 @@
 <tr><td>LAR</td><td>Sony Michel            </td></tr>
 <tr><td>SEA</td><td>Alex Collins           </td></tr>
 <tr><td>PHI</td><td>Jordan Howard          </td></tr>
+<tr><td>TEN</td><td>D'Onta Foreman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
-<tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
