--- a/roster.html
+++ b/roster.html
@@ -135,9 +135,9 @@
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
-<tr><td>WAS</td><td>Curtis Samuel          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
+<tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
