--- a/pickups.html
+++ b/pickups.html
@@ -146,8 +146,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>David Njoku/Curtis Samuel</td>
+<td width=50>11/13</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
